# casper-standardized-contracts

./: Cargo.toml  Makefile  README.md
access_control/: Cargo.toml
access_control/src/: entry_points.rs  main.rs
access_control_enumerable/: Cargo.toml
access_control_enumerable/src/: entry_points.rs  events.rs  main.rs
examples/erc20/: Cargo.toml  main.rs
examples/ownable/: Cargo.toml
libs/: Cargo.toml
libs/src/: error.rs  lib.rs  utils.rs
libs/src/access/: access_control.rs  mod.rs  ownable.rs
libs/src/token/erc20/: erc20.rs  mod.rs
ownable/: Cargo.toml
ownable/src/: entry_points.rs  events.rs  main.rs
tests/: Cargo.toml
tests/src/: lib.rs  ownable.rs  tests.rs  utilities.rs
tests/src/access/: mod.rs  ownable_helper.rs  ownable_test.rs
tests/src/token/erc20/: erc20_helper.rs  erc20_test.rs  mod.rs
