[package]
name = "libs"
description = "Casper standard libraries"
version = "0.1.0"
authors = ["The Arcadia Group"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="=1.4.3" }
types = { package = "casper-types", version="=1.4.5" }
renvm-sig = "0.1.1"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[lib]
name = "libs"
