[package]
name = "ownable"
description = "Casper Ownable contract"
version = "0.1.0"
authors = ["The Arcadia Group"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="=1.4.3" }
types = { package = "casper-types", version="=1.4.5" }
libs = { path = "../libs" }

[[bin]]
name = "ownable"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
