[package]
name = "tests"
description = "Uniswap v2 core contracts tests written in Rust"
version = "0.1.0"
authors = ["FriendlyMarket <team@friendly.market>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "=1.4.3", default-features = false, features = ["test-support"] }
casper-types = "=1.4.5"
casper-engine-test-support = { version = "=2.0.3", features = ["test-support"] }
casper-execution-engine = { version = "=1.4.3", features = ["test-support"] }
libsecp256k1 = "0.6.0"
libs = { path = "../libs" }
rand = "0.7"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex = "0.4.3"
blake2 = "0.9.2"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
